src/objects/ProjectCity__c.object
<CustomObject>
    <fields>
        <fullName>CityName1__c</fullName>
        <formula>xxCity__r.Name</formula>
        <label>City Name1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityName__c</fullName>
        <label>City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassCategory__c</fullName>
        <label>Class Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassCode__c</fullName>
        <formula>&quot;AECOM Project City&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleProjectNumber__c</fullName>
        <formula>Project__r.OracleProjectnumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleSyncErrorMessage__c</fullName>
        <label>Oracle Sync Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OracleSyncStatus__c</fullName>
        <description>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</description>
        <inlineHelpText>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectCountryRisk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Country Risk</label>
        <referenceTo>ProjectCountry_Risk__c</referenceTo>
        <relationshipLabel>Project Cities</relationshipLabel>
        <relationshipName>Project_Cities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Cities</relationshipLabel>
        <relationshipName>ProjectCities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>xxCity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xxCity</label>
        <referenceTo>xxCity__c</referenceTo>
        <relationshipLabel>Project Cities</relationshipLabel>
        <relationshipName>ProjectCities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project City</label>
    <nameField>
        <displayFormat>ProjCity-{00000000}</displayFormat>
        <label>Project City Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Cities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>